--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/Eaf4R7Qvdr5PiInc_WBB93cBYV42v0OksmGCVOo5wBN8vg?e=p1xDXF">Revenue Requirement Example<br />
+										<h2><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EdHJ_eEa1d9IqUL6Tnv5pxcBrvFeo3Zt5NhmePTY9U3CFA?e=ckJrAp">Revenue Requirement Example<br />
 										</a></h2>
 									</header>
 									<a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/Eaf4R7Qvdr5PiInc_WBB93cBYV42v0OksmGCVOo5wBN8vg?e=p1xDXF" class="image fit"><img src="images/revenue.jpg" alt="" /></a>
@@ -75,25 +75,25 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/ERB-d7I4mWNAu-OAryouJZwB9TliQSQKdTtchGBGgzzqvQ?e=8KzuMw">Data Analysis Using Excel<br />
+										<h2><a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FCyclistic%20Bike%2DShare%20Analysis%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1">Data Analysis Using Excel<br />
 										</a></h2>
 									</header>
-									<a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/ERB-d7I4mWNAu-OAryouJZwB9TliQSQKdTtchGBGgzzqvQ?e=8KzuMw" class="image fit"><img src="images/Cyclistic-Bike-Share-Analysis.png" alt="" /></a>
+									<a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FCyclistic%20Bike%2DShare%20Analysis%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1" class="image fit"><img src="images/Cyclistic-Bike-Share-Analysis.png" alt="" /></a>
 									<p>This presentation was created from a dataset with more than 3 million rows of data stored in multiple worksheets. All data cleaning, analysis, and charts were created in Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/ERB-d7I4mWNAu-OAryouJZwB9TliQSQKdTtchGBGgzzqvQ?e=8KzuMw" class="button">View Project</a></li>
+										<li><a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FCyclistic%20Bike%2DShare%20Analysis%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EfMKcwlXx2BIrjJdJRQU7-8BhPZP15IWK6XSSn_lVuHtUA?e=aqny2r">Block Rate Design<br />
+										<h2><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EeuMTtQ2eeZPiTJBlo8Y51MBCN6daiZ-fKzNLQYW8ox-Nw?e=dMjbvd">Block Rate Design<br />
 										</a></h2>
 									</header>
-									<a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EfMKcwlXx2BIrjJdJRQU7-8BhPZP15IWK6XSSn_lVuHtUA?e=aqny2r" class="image fit"><img src="images/Block-rate-energy-tariffs-what-you-need-to-know.jpg" alt="" /></a>
+									<a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EeuMTtQ2eeZPiTJBlo8Y51MBCN6daiZ-fKzNLQYW8ox-Nw?e=dMjbvd" class="image fit"><img src="images/Block-rate-energy-tariffs-what-you-need-to-know.jpg" alt="" /></a>
 									<p>This is a block rate design project completed for my graduate certificate in Public Utility Regulation and Economics (PURE).</p>
 									<ul class="actions special">
-										<li><a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EfMKcwlXx2BIrjJdJRQU7-8BhPZP15IWK6XSSn_lVuHtUA?e=aqny2r" class="button">View Project</a></li>
+										<li><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EeuMTtQ2eeZPiTJBlo8Y51MBCN6daiZ-fKzNLQYW8ox-Nw?e=dMjbvd" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -111,25 +111,25 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EdnFWR9do4ZJubPF5YRQ734BeNa-0wWBAWAxw8Sb5HcqKw?e=olukvZ">Cost Allocation<br />
+										<h2><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/ERkUlscY0VpOs_TmXoneXZsBYTtwIoXBcXZSDh0cFLK-6A?e=yEPlM4">Cost Allocation<br />
 										</a></h2>
 									</header>
-									<a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EdnFWR9do4ZJubPF5YRQ734BeNa-0wWBAWAxw8Sb5HcqKw?e=olukvZ" class="image fit"><img src="images/Cost-Allocation.jpg" alt="" /></a>
+									<a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/ERkUlscY0VpOs_TmXoneXZsBYTtwIoXBcXZSDh0cFLK-6A?e=yEPlM4" class="image fit"><img src="images/Cost-Allocation.jpg" alt="" /></a>
 									<p>This is a cost allocation project completed to earn my Public Utility Regulation and Economics (PURE) graduate certificate.</p>
 									<ul class="actions special">
-										<li><a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/EdnFWR9do4ZJubPF5YRQ734BeNa-0wWBAWAxw8Sb5HcqKw?e=olukvZ" class="button">View Project</a></li>
+										<li><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/ERkUlscY0VpOs_TmXoneXZsBYTtwIoXBcXZSDh0cFLK-6A?e=yEPlM4Z" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/EaaOFuj2j65NonI7Rjjq4n0BpKPPGBFb_B6pQocEowf8KA?e=FxJZGP">Tableau Dashboard Example<br />
+										<h2><a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FAirBnB%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1">Tableau Dashboard Example<br />
 										</a></h2>
 									</header>
-									<a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/EaaOFuj2j65NonI7Rjjq4n0BpKPPGBFb_B6pQocEowf8KA?e=FxJZGP" class="image fit"><img src="images/AirBnB.jpg" alt="" /></a>
+									<a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FAirBnB%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1" class="image fit"><img src="images/AirBnB.jpg" alt="" /></a>
 									<p>This is an example of a Tableau dashboard I created from more than 2 million rows of data related to Airbnb rentals in Seattle in 2022.</p>
 									<ul class="actions special">
-										<li><a href="https://webmailbyui-my.sharepoint.com/:b:/g/personal/konines_byui_edu/EaaOFuj2j65NonI7Rjjq4n0BpKPPGBFb_B6pQocEowf8KA?e=FxJZGP" class="button">View Project</a></li>
+										<li><a href="https://eltnmsu-my.sharepoint.com/personal/konines_nmsu_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio%2FAirBnB%2Epdf&parent=%2Fpersonal%2Fkonines%5Fnmsu%5Fedu%2FDocuments%2FPortfolio&ga=1" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
