--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<h2><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EdHJ_eEa1d9IqUL6Tnv5pxcBrvFeo3Zt5NhmePTY9U3CFA?e=ckJrAp">Revenue Requirement Example<br />
 										</a></h2>
 									</header>
-									<a href="https://webmailbyui-my.sharepoint.com/:x:/g/personal/konines_byui_edu/Eaf4R7Qvdr5PiInc_WBB93cBYV42v0OksmGCVOo5wBN8vg?e=p1xDXF" class="image fit"><img src="images/revenue.jpg" alt="" /></a>
+									<a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EdHJ_eEa1d9IqUL6Tnv5pxcBrvFeo3Zt5NhmePTY9U3CFA?e=ckJrAp" class="image fit"><img src="images/revenue.jpg" alt="" /></a>
 									<p>This is a revenue requirement project I completed to receive my Public Utility Regulation and Economics (PURE) graduate certificate. </p>
 									<ul class="actions special">
 										<li><a href="https://eltnmsu-my.sharepoint.com/:x:/g/personal/konines_nmsu_edu/EdHJ_eEa1d9IqUL6Tnv5pxcBrvFeo3Zt5NhmePTY9U3CFA?e=ckJrAp" class="button">View Project</a></li>
